--- a/assets/src/scss/_header.scss
+++ b/assets/src/scss/_header.scss
@@ -41,7 +41,7 @@ header {
             line-height: 80px;
             display: inline-block;
             vertical-align: middle;
-            padding: 0px 10px;
+            padding: 0px 5px;
             i {
                 display: inline-block;
                 vertical-align: middle;
